Minor code clarity changes